--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.6.8",
     "framer-motion": "^12.6.3",
+    "lucide-react": "^0.503.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
